--- a/WebServer/WebServer.csproj
+++ b/WebServer/WebServer.csproj
@@ -11,4 +11,12 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Responses\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\BlazorFrontend\Shared\BlazorFrontend.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
